fix: Swagger add auth
